{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 687,
  "lineage": "0050a96c-9b2f-54f4-365b-88dfad1bfe0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00931301",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-54-94-71-129.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.94.71.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-elastic-ip-crt"
            },
            "tags_all": {
              "Name": "prod-elastic-ip-crt"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07983613af1a3ef44",
            "arn": "arn:aws:ec2:sa-east-1:718542411817:instance/i-0de59d7b60cfde198",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de59d7b60cfde198",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c03b53b334f9b441",
            "private_dns": "ip-172-31-15-80.sa-east-1.compute.internal",
            "private_ip": "172.31.15.80",
            "public_ip": "54.94.31.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056c4e62ea7df3e85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ef2a236348f9e7b",
            "tags": {
              "Name": "ec2-web01"
            },
            "tags_all": {
              "Name": "ec2-web01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e451d060c6c87840"
            ]
          },
          "dependencies": [
            "aws_security_group.instance",
            "aws_subnet.in8-subnet",
            "aws_vpc.IN8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bde880fb57a5227",
            "arn": "arn:aws:ec2:sa-east-1:718542411817:instance/i-0d5ac12fcb853534c",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5ac12fcb853534c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0ea45a43b7fabcb",
            "private_dns": "ip-172-31-3-161.sa-east-1.compute.internal",
            "private_ip": "172.31.3.161",
            "public_ip": "52.67.233.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098a0d911621a9690",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ef2a236348f9e7b",
            "tags": {
              "Name": "openvpn"
            },
            "tags_all": {
              "Name": "openvpn"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e451d060c6c87840"
            ]
          },
          "dependencies": [
            "aws_security_group.instance",
            "aws_subnet.in8-subnet",
            "aws_vpc.IN8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:internet-gateway/igw-0477656044b59f777",
            "id": "igw-0477656044b59f777",
            "owner_id": "718542411817",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0a6834aa731eb7d43"
          },
          "dependencies": [
            "aws_vpc.IN8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "IN8-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f319b8e541599418",
            "original_route_table_id": "rtb-0fe2a2879345510a0",
            "route_table_id": "rtb-09bd71433693da211",
            "vpc_id": "vpc-0a6834aa731eb7d43"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_vpc.IN8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00931301",
            "connectivity_type": "public",
            "id": "nat-0b0993e4014bdd8f7",
            "network_interface_id": "eni-0b08ba3e87cb07954",
            "private_ip": "172.31.5.83",
            "public_ip": "54.94.71.129",
            "subnet_id": "subnet-02ef2a236348f9e7b",
            "tags": {
              "Name": "prod-nat-gateway-crt"
            },
            "tags_all": {
              "Name": "prod-nat-gateway-crt"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.prod-igw",
            "aws_subnet.in8-subnet",
            "aws_vpc.IN8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:route-table/rtb-09bd71433693da211",
            "id": "rtb-09bd71433693da211",
            "owner_id": "718542411817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0477656044b59f777",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "tags_all": {
              "Name": "prod-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6834aa731eb7d43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.IN8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:security-group/sg-0e451d060c6c87840",
            "description": "OpenVPN security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e451d060c6c87840",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 945,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 945
              }
            ],
            "name": "openvpn-default",
            "name_prefix": "",
            "owner_id": "718542411817",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6834aa731eb7d43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IN8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "in8-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:subnet/subnet-02ef2a236348f9e7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-02ef2a236348f9e7b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718542411817",
            "tags": {
              "Name": "prod-subnet-in8-subnet"
            },
            "tags_all": {
              "Name": "prod-subnet-in8-subnet"
            },
            "vpc_id": "vpc-0a6834aa731eb7d43"
          },
          "dependencies": [
            "aws_vpc.IN8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "IN8-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:vpc/vpc-0a6834aa731eb7d43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0a5b6b8a856e4caba",
            "default_route_table_id": "rtb-0fe2a2879345510a0",
            "default_security_group_id": "sg-0230af0d6814b88ae",
            "dhcp_options_id": "dopt-73752f14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a6834aa731eb7d43",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fe2a2879345510a0",
            "owner_id": "718542411817",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}